# src/routes/product-router.js
@@ -3,12 +3,14 @@ import {
   addProducts,
   deleteProduct,
   getAllProducts,
+  getProductById,
+  saveProduct,
 } from "../controllers/products-controller.js";
 
 const productRouter = express.Router();
 
-productRouter.get("/products", getAllProducts);
-productRouter.post("/products", addProducts);
-productRouter.delete("/products/:id", deleteProduct);
+productRouter.post("/products", saveProduct);
+productRouter.get("/products", getProductById);
+// productRouter.delete("/products/:id", deleteProduct);
 
 export default productRouter;
