# src/routes/purchase-router.js
@@ -1,0 +1,21 @@
+import express from "express";
+import {
+  getAveragePrice,
+  getFewest,
+  getPopular,
+  getProductProfit,
+  getProductQuantitiy,
+  purchaseProduct,
+} from "../controllers/purchases-controller.js";
+
+const purchaseRouter = express.Router();
+
+purchaseRouter.post("/purchases", purchaseProduct);
+purchaseRouter.get("/products/:productId/quantity", getProductQuantitiy);
+purchaseRouter.get("/products/:productId/average-price", getAveragePrice);
+purchaseRouter.get("/products/:productId/profit", getProductProfit);
+purchaseRouter.get("/products/fewest", getFewest);
+purchaseRouter.get("/products/popular", getPopular);
+// productRouter.delete("/products/:id", deleteProduct);
+
+export default purchaseRouter;
